--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "<h1>#Hiring_People</h1>\r <h2>READ.ME - EM CONSTRUÇÃO -> As orientações a seguir são para\r     o projeto em si.\r </h2>\r <p>\r     Repositório para a criação de um sistema CRUD, com tecnologias como Node.js e\r     Express\r     para o cadastro de novas\r     pessoas que podem ser contratadas por uma empresa fictícia.\r </p>",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "mocha tests/**/*.test.js --exit",
     "start": "node src/server.js",
     "dev": "nodemon src/server.js",
     "lint": "eslint --no-inline-config --no-error-on-unmatched-pattern -c .eslintrc.json ."
@@ -16,8 +16,10 @@
     "express": "4.17.1"
   },
   "devDependencies": {
+    "chai": "4.3.4",
     "eslint": "6.8.0",
     "eslint-config-trybe-backend": "1.0.1",
+    "mocha": "8.4.0",
     "nodemon": "2.0.15"
   }
 }
