--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "4.17.1"
+    "express": "4.17.1",
+    "mysql2": "^3.7.0"
   },
   "devDependencies": {
     "chai": "4.3.4",
